Refactoring the WrappingAndBracesVisitor to contain more functionality